some responsive fixes to make side bar pop up to top on small screens

--- a/css/makeitresponsive.css
+++ b/css/makeitresponsive.css
@@ -2,7 +2,15 @@
 
 @media only screen and (max-width: 768px) {
   .map{position: inherit; height: 400px; width: 100%; display: block;}
-  .sidepanel{position: inherit; width: 100%;}
+  .sidepanel{
+    left: 0px;
+    width: 45%;
+    height: 90px;
+  }
+  .sidepanel .wrapper .subheader
+  {
+    margin-top: -95px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
